--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "bootstrap": "^4.6.0",
     "cors": "^2.8.5",
     "ejs": "^3.1.6",
     "eslint": "^7.20.0",
     "express": "^4.17.1",
     "pg": "^8.5.1",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0"
