--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express": "^4.17.1",
     "knex": "^0.21.17",
     "pg": "^8.5.1",
+    "pg-format": "^1.0.4",
     "pg-hstore": "^2.3.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
