--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "ejs": "^3.1.6",
     "eslint": "^7.20.0",
     "express": "^4.17.1",
+    "jquery": "^3.5.1",
     "pg": "^8.5.1",
+    "popper.js": "^1.16.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
